--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>title</title>
+  <title> Reponse quête 3 </title>
 </head>
 <body>
+  <h1> Quête 3 </h1>
 
 </body>
 </html>
