--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title> Reponse quête 3 </title>
+  <title>quete 3</title>
 </head>
 <body>
-  <h1> Quête 3 </h1>
+  <h1>lalala</h1>
 
 </body>
 </html>
